rewrote html and css to get in-line block to work
still not working

--- a/index.html
+++ b/index.html
@@ -2,31 +2,41 @@
 <html>
     <head>
         <link rel="stylesheet" href="/CSS/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<!-- fonts -->
+        <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@300;400;500;600&display=swap" rel="stylesheet">
     </head>
     <body>
         <header class="navigation">
             <div class="inline-block logo">
-                <img src="images/kw.svg">
+                
                 <nav class="inline-block">
-                    <ul>
-                        <li>projects</li>
-                        <li>about me</li>
-                        <li>contact</li>
+                    <img src="/images/kw.svg">
+                    <ul class="nav">
+                        <li>Projects</li>
+                        <li>About Me</li>
+                        <li>Contact</li>
                     </ul>
                 </nav>
             </div>
         </header>
         <section class="heroImg">
-            <img src="images/placeholder-image.png">
-            <p>I’m a multi-disciplinary designer focused on inclusive design and accessibility. I’m interested in creating digital experiences that are not only beautiful but also intuitive and easy to use for as many people as possible.</p>
-            <button>Download Resume</button>
+            <div class="content">
+                <img src="/images/placeholder-image.png">
+                <p>I’m a multi-disciplinary designer focused on inclusive design and accessibility. I’m interested in creating digital experiences that are not only beautiful but also intuitive and easy to use for as many people as possible.</p> 
+
+                <p>User Research | User Empathy | Qualitative Interviews
+                    Wireframing & UI Prototyping | Interaction Design
+                    Visual Communication</p>
+                <button class="button">Download Resume</button>    
+            </div>
         </section>
         <footer>
-            <ul class="footerNav">
-                <li>projects</li>
-                <li>about me</li>
-                <li>contact</li>
+            <ul>
+                <li>Projects</li>
+                <li>About Me</li>
+                <li>Contact</li>
             </ul>
         </footer>
-    </body>
-</html>
+    </body>    
