--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     </head>
     <body>
         <header class="navigation">
-            <div class="inline-block logo">
-                
+            <div class="nav inline-block logo"> 
                 <nav class="inline-block">
                     <img src="/images/kw.svg">
                     <ul class="nav">
