footer buttons added

--- a/index.html
+++ b/index.html
@@ -42,10 +42,17 @@
         </section>
     </main>
         <footer>
-            <ul>
+           <!-- fonts <ul>
                 <li>Projects</li>
                 <li>About Me</li>
                 <li>Contact</li>
-            </ul>
+            </ul>  -->
+            <section class="footer-buttons">
+                <ul>
+                    <li><button class="footerButton"><img src="./images/linkedin-square.png" alt="LinkedIn icon" width="40px"></button></li>
+                    <li><button class="footerButton"><img src="./images/envelope.png" alt="Email envelope icon" width="40px"></button></li>
+                </ul>
+            </section>
+            
         </footer>
     </body>    
