changes to img tag

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <main>
         <section class="heroImg">
             <div class="content">
-                <img id="about-img" src="/images/about-photo.JPG" alt="woman wearing a yellow hat and purple jacket in a forest with a white dog">
+                <img id="about-img" src="./images/about-photo.JPG" alt="woman wearing a yellow hat and purple jacket in a forest with a white dog">
                 <h2>A bit about me...</h2>
                 <br>
                 <p class="about-text">I’m a multi-disciplinary designer focused on inclusive design and accessibility. I’m interested in creating digital experiences that are not only beautiful but also intuitive and easy to use for as many people as possible.</p> 
