--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <li><button class="footerButton"><img src="./images/linkedin-square.png" alt="LinkedIn icon" width="40px"></button></li>
                     <li><button class="footerButton"><img src="./images/envelope.png" alt="Email envelope icon" width="40px"></button></li>
                     <li><button class="footerButton"><img src="./images/envelope.png" alt="Email envelope icon" width="40px"></button></li>
+                    <li><button class="footerButton"><img src="./images/envelope.png" alt="Email envelope icon" width="40px"></button></li>
                 </ul>
             </section>
             
